# Reversi

./: .gitignore  AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  ConsoleDrawer.cpp  ConsoleDrawer.h  Drawer.h  Game.cpp  Game.h  GameMenuController.cpp  GameMenuController.h  LocalClientPlayer.cpp  LocalClientPlayer.h  LocalPlayer.cpp  LocalPlayer.h  Logic.h  Player.cpp  Player.h  Point.cpp  Point.h  README.md  RemoteGameClient.cpp  RemoteGameClient.h  RemotePlayer.cpp  RemotePlayer.h  ReversiLogic.cpp  ReversiLogic.h  log.txt  main.cpp
Tests/: PointTest.cpp
tests/: main_test.cpp  test_AIPlayer.cpp  test_Board.cpp  test_Point.cpp  test_ReversiLogic.cpp
