cmake_minimum_required(VERSION 3.8)
project(Reversi)

set(CMAKE_CXX_STANDARD 98)
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googlemock/include)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(SOURCE_FILES main.cpp Game.cpp Game.h Player.h Point.cpp Point.h Logic.h ReversiLogic.cpp ReversiLogic.h LocalPlayer.cpp LocalPlayer.h Drawer.h ConsoleDrawer.cpp ConsoleDrawer.h AIPlayer.cpp AIPlayer.h Tests/PointTest.cpp)
add_executable(Reversi ${SOURCE_FILES} Board.cpp Board.h)
target_link_libraries(Reversi gtest gtest_main)